# bat-native-mllib

./: .gitignore  .travis.yml  BUILD.gn  Dockerfile  README.md  scores  svm.py  test.cc
data/: scores.json
include/: export.h  linear_regression.h  logistic_regression.h  naive_bayes.h
src/: linear_regression.cc  logistic_regression.cc  naive_bayes.cc
test/: test.cc
